--- a/themes/no-style-please/templates/404.html
+++ b/themes/no-style-please/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    404
+    <blockquote>404: not found. are you lost?</blockquote>
 {% endblock content %}
