--- a/themes/no-style-please/templates/base.html
+++ b/themes/no-style-please/templates/base.html
@@ -128,8 +128,8 @@
                 {% block footer %}{% endblock footer %}
                 <hr data-content=" bottom ">
                 <span>
-                    <p>This site was built using <a href="https://github.com/getzola/zola">Zola</a> and the 
-                        source code can be found <a href="https://github.com/pants721/pants721.github.io">here</a>.</p>
+                    <!-- <p>This site was built using <a href="https://github.com/getzola/zola">Zola</a> and the  -->
+                    <!--     source code can be found <a href="https://github.com/pants721/pants721.github.io">here</a>.</p> -->
                     {% if config.author %} 
                     © {{ config.author }} 2024-2024,
                     {% endif %}
