--- a/themes/no-style-please/sass/style.scss
+++ b/themes/no-style-please/sass/style.scss
@@ -31,6 +31,14 @@ body {
 
 .post-meta { text-align: right; }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline dashed;
+}
+
 h2, h3, h4, h5, h6 { margin-top: 3rem; }
 
 hr { margin: 1rem 0; }
@@ -139,7 +147,6 @@ nav, .taxonomies {
 footer {
     margin-top: 2rem;
     font-size: 85%;
-    opacity: 50%;
 }
 
 footer hr {
