added a commented out title thing for when i finally get the domain

--- a/themes/no-style-please/templates/base.html
+++ b/themes/no-style-please/templates/base.html
@@ -106,6 +106,9 @@
     </head>
     <body class="dark-mode">
         <div class="w">
+            <!-- <div class="site-title-div"> -->
+            <!--     <p class="site-title">pantsnet</p> -->
+            <!-- </div> -->
             <header>
                 {% if config.extra.header_nav %}
                 <nav>
