updated themeing stuff

--- a/themes/no-style-please/sass/_theme.scss
+++ b/themes/no-style-please/sass/_theme.scss
@@ -30,6 +30,10 @@ $link-color: #551A8B;
 
         &.invertable { filter: invert(0); }
     }
+
+    .greeting {
+        opacity: 75%;
+    }
 }
 
 @media (prefers-color-scheme: light) {
