--- a/themes/no-style-please/sass/style.scss
+++ b/themes/no-style-please/sass/style.scss
@@ -22,7 +22,8 @@ body {
     font-optical-sizing: auto;
     font-weight: medium;
     font-style: normal;
-    font-size: 18px;
+    // font-size: 18px;
+    font-size: 1.15rem;
     line-height: 1.4;
     margin: 0;
     min-height: 100%;
@@ -32,7 +33,7 @@ body {
 .post-meta { text-align: right; }
 
 a {
-    text-decoration: none;
+    // text-decoration: none;
 }
 
 a:hover {
@@ -53,15 +54,13 @@ li { margin: 0.4rem 0; }
     max-width: 740px;
     margin: 0 auto;
     padding: 4rem 2rem;
+    // padding-top: 1em;
 }
 
 hr {
     text-align: center;
     border: 0;
     border-top: #b5b5b5 1px solid;
-
-    // &:before { content: '/////' }
-    // &:after { content: attr(data-content) '/////' }
 }
 
 table { width: 100%; }
@@ -141,7 +140,6 @@ nav, .taxonomies {
 
     padding: 5px !important;
     border-radius: 5px !important;
-    opacity: 75%;
 }
 
 footer {
@@ -156,3 +154,14 @@ footer hr {
 details summary {
     cursor: pointer;
 }
+
+// .site-title {
+//     // position: absolute !important;
+//
+//     margin-top: 0;
+//     top: 0em !important;
+//     left: 1rem !important;
+//     text-align: center;
+//
+//     font-size: 1.5em;
+// }
