--- a/themes/no-style-please/templates/base.html
+++ b/themes/no-style-please/templates/base.html
@@ -1,86 +1,97 @@
 <!doctype html>
 <html lang="{{ lang }}">
-    <head>
-        <meta charset="UTF-8">
-        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
-        <meta content="text/html; charset=UTF-8" http-equiv="content-type"/>
-        <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
-        {% if page.title %}
-        {% set title = page.title ~ " :: " ~ config.title %}
-        {% elif section.title %}
-        {% set title = section.title ~ " :: " ~ config.title %}
-        {% elif taxonomy.title %}
-        {% set title = taxonomy.name ~ " :: " ~ config.title %}
-        {% elif config.title %}
-        {% set title = config.title %}
-        {% endif %}
+<head>
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-        {% if page.extra.greeting %}
-        {% set greeting = page.extra.greeting %}
-        {% elif section.extra.greeting %}
-        {% set greeting = section.extra.greeting %}
-        {% endif %}
+    {% if page.title %}
+    {% set title = page.title ~ " :: " ~ config.title %}
+    {% elif section.title %}
+    {% set title = section.title ~ " :: " ~ config.title %}
+    {% elif taxonomy.title %}
+    {% set title = taxonomy.name ~ " :: " ~ config.title %}
+    {% elif config.title %}
+    {% set title = config.title %}
+    {% endif %}
 
-        {% if page.extra.author %}
-        {% set author = page.extra.author %}
-        {% elif section.extra.author %}
-        {% set author = section.extra.author %}
-        {% elif config.extra.author %}
-        {% set author = config.extra.author %}
-        {% endif %}
+    {% if page.extra.greeting %}
+    {% set greeting = page.extra.greeting %}
+    {% elif section.extra.greeting %}
+    {% set greeting = section.extra.greeting %}
+    {% endif %}
 
-        {% if page.description %}
-        {% set description = page.description | truncate(length=150) %}
-        {% elif section.description %}
-        {% set description = section.description | truncate(length=150) %}
-        {% elif config.description %}
-        {% set description = config.description | truncate(length=150) %}
-        {% endif %}
+    {% if page.extra.author %}
+    {% set author = page.extra.author %}
+    {% elif section.extra.author %}
+    {% set author = section.extra.author %}
+    {% elif config.extra.author %}
+    {% set author = config.extra.author %}
+    {% endif %}
 
-        {% if page.extra.image %}
-        {% set image = get_url(path=page.extra.image, trailing_slash=false) %}
-        {% elif section.extra.image %}
-        {% set image = get_url(path=section.extra.image, trailing_slash=false) %}
-        {% elif config.extra.logo %}
-        {% set image = get_url(path=config.extra.logo, trailing_slash=false) %}
-        {% endif %}
+    {% if page.description %}
+    {% set description = page.description | truncate(length=150) %}
+    {% elif section.description %}
+    {% set description = section.description | truncate(length=150) %}
+    {% elif config.description %}
+    {% set description = config.description | truncate(length=150) %}
+    {% endif %}
 
-        {% if page.permalink %}
-        {% set url = page.permalink %}
-        {% elif section.permalink %}
-        {% set url = section.permalink %}
-        {% elif config.base_url %}
-        {% set url = config.base_url %}
-        {% endif %}
+    {% if page.extra.image %}
+    {% set image = get_url(path=page.extra.image, trailing_slash=false) %}
+    {% elif section.extra.image %}
+    {% set image = get_url(path=section.extra.image, trailing_slash=false) %}
+    {% elif config.extra.logo %}
+    {% set image = get_url(path=config.extra.logo, trailing_slash=false) %}
+    {% endif %}
 
-        {% if title %}<title>{{ title }}</title>{% endif %}
-        {% block metatags %}
-        {% if title %}<meta name="title" content="{{ title }}">{% endif %}
-        {% if author %}<meta name="author" content="{{ author }}">{% endif %}
-        {% if description %}<meta name="description" content="{{ description }}">{% endif %}
-        <meta name="generator" content="Zola v0.16.1">
+    {% if page.permalink %}
+    {% set url = page.permalink %}
+    {% elif section.permalink %}
+    {% set url = section.permalink %}
+    {% elif config.base_url %}
+    {% set url = config.base_url %}
+    {% endif %}
 
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="{{ url | safe }}">
-        {% if title %}<meta property="og:site_name" content="{{ config.title }}">{% endif %}
-        {% if title %}<meta property="og:title" content="{{ title }}">{% endif %}
-        {% if description %}<meta property="og:description" content="{{ description }}">{% endif %}
-        {% if image %}<meta property="og:image" content="{{ image }}">{% endif %}
+    {% if title %}<title>{{ title }}</title>{% endif %}
+    {% block metatags %}
+    {% if title %}
+    <meta name="title" content="{{ title }}">{% endif %}
+    {% if author %}
+    <meta name="author" content="{{ author }}">{% endif %}
+    {% if description %}
+    <meta name="description" content="{{ description }}">{% endif %}
+    <meta name="generator" content="Zola v0.16.1">
 
-        {% set twitter_card = config.extra.twitter_card | default(value=true) %}
-        {% if twitter_card != false %}
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="{{ url | safe }}">
-        {% if title %}<meta property="twitter:title" content="{{ title }}">{% endif %}
-        {% if description %}<meta property="twitter:description" content="{{ description }}">{% endif %}
-        {% if image %}<meta property="twitter:image" content="{{ image }}">{% endif %}
-        {% endif %}
-        
-        <link rel="canonical" href="{{ url | safe }}">
-        <!-- {% if image %}<link rel="shortcut icon" type="image/x-icon" href="{{ get_url(path=config.extra.logo, trailing_slash=false) }}">{% endif %} -->
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-        <script type="application/ld+json">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ url | safe }}">
+    {% if title %}
+    <meta property="og:site_name" content="{{ config.title }}">{% endif %}
+    {% if title %}
+    <meta property="og:title" content="{{ title }}">{% endif %}
+    {% if description %}
+    <meta property="og:description" content="{{ description }}">{% endif %}
+    {% if image %}
+    <meta property="og:image" content="{{ image }}">{% endif %}
+
+    {% set twitter_card = config.extra.twitter_card | default(value=true) %}
+    {% if twitter_card != false %}
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="{{ url | safe }}">
+    {% if title %}
+    <meta property="twitter:title" content="{{ title }}">{% endif %}
+    {% if description %}
+    <meta property="twitter:description" content="{{ description }}">{% endif %}
+    {% if image %}
+    <meta property="twitter:image" content="{{ image }}">{% endif %}
+    {% endif %}
+
+    <link rel="canonical" href="{{ url | safe }}">
+    <!-- {% if image %}<link rel="shortcut icon" type="image/x-icon" href="{{ get_url(path=config.extra.logo, trailing_slash=false) }}">{% endif %} -->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <script type="application/ld+json">
             {
                 {% if description %}"description":"{{ description | safe }}",{% endif %}
                 "url":"{{ url | safe }}",
@@ -94,84 +105,89 @@
                 "@context":"https://schema.org"
             }
         </script>
-        {% endblock metatags %}
-        {% if config.generate_feed %}
-        {% block feed %}
-        <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path="atom.xml", trailing_slash=false) }}">
-        {% endblock feed %}
-        {% endif %}
-        {% block css %}
-        <link rel="stylesheet" href="{{ get_url(path='style.css', trailing_slash=false) | safe }}"/>
-        {% endblock css %}
-    </head>
-    <body class="dark-mode">
-        <div class="w">
-            <!-- <div class="site-title-div"> -->
-            <!--     <p class="site-title">pantsnet</p> -->
-            <!-- </div> -->
-            <header>
-                {% if config.extra.header_nav %}
-                <nav>
-                    {% for nav_item in config.extra.header_nav %}
-                    <a href="{{ nav_item.url | safe }}" {% if nav_item.new_tab %}target="_blank" rel="noreferrer noopener"{% endif %}>{{ nav_item.name }}</a>
-                    {% endfor %}
-                </nav>
+    {% endblock metatags %}
+    {% if config.generate_feed %}
+    {% block feed %}
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{ get_url(path=" atom.xml",
+        trailing_slash=false) }}">
+    {% endblock feed %}
+    {% endif %}
+    {% block css %}
+    <link rel="stylesheet" href="{{ get_url(path='style.css', trailing_slash=false) | safe }}" />
+    {% endblock css %}
+</head>
+
+<body class="dark-mode">
+    <div class="w">
+        <!-- <div class="site-title-div"> -->
+        <!--     <p class="site-title">pantsnet</p> -->
+        <!-- </div> -->
+        <header>
+            {% if config.extra.header_nav %}
+            <nav>
+                {% for nav_item in config.extra.header_nav %}
+                <a href="{{ nav_item.url | safe }}" {% if nav_item.new_tab %}target="_blank" rel="noreferrer noopener"
+                    {% endif %}>{{ nav_item.name }}</a>
+                {% endfor %}
+            </nav>
+            {% endif %}
+            {% block header %}
+            {% if greeting %}
+            <code class="greeting">{{ greeting }}</code>
+            {% endif %}
+            <!-- {% if title %}<h1>{{ title }}</h1>{% endif %} -->
+            {% endblock header %}
+        </header>
+        <main class="page-content" aria-label="Content">
+            {% block content %}{% endblock content %}
+        </main>
+        <footer>
+            {% block footer %}{% endblock footer %}
+            <hr data-content=" bottom ">
+            <span>
+                <!-- <p>This site was built using <a href="https://github.com/getzola/zola">Zola</a> and the  -->
+                <!--     source code can be found <a href="https://github.com/pants721/pants721.github.io">here</a>.</p> -->
+                {% if config.author %}
+                © {{ config.author }} 2024-2024,
                 {% endif %}
-                {% block header %}
-                    {% if greeting %}
-                        <code class="greeting">{{ greeting }}</code>
-                    {% endif %}
-                    <!-- {% if title %}<h1>{{ title }}</h1>{% endif %} -->
-                {% endblock header %}
-            </header>
-            <main class="page-content" aria-label="Content">
-                {% block content %}{% endblock content %}
-            </main>
-            <footer>
-                {% block footer %}{% endblock footer %}
-                <hr data-content=" bottom ">
-                <span>
-                    <!-- <p>This site was built using <a href="https://github.com/getzola/zola">Zola</a> and the  -->
-                    <!--     source code can be found <a href="https://github.com/pants721/pants721.github.io">here</a>.</p> -->
-                    {% if config.author %} 
-                    © {{ config.author }} 2024-2024,
-                    {% endif %}
-                    licensed under
-                    <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
-                </span>
-            </footer>
-        </div>
-        <div class="dark-mode-buttons">
-            <button class="dark-mode-button" id="dark-mode-on"><img src="{{ get_url(path='svg/dark_mode.svg') }}" width="24" height="24" alt="Dark mode" aria-label="dark mode toggle" title="Dark mode"></button>
-            <button class="dark-mode-button" id="dark-mode-off"><img src="{{ get_url(path='svg/light_mode.svg') }}" width="24" height="24" alt="Light mode" aria-label="light mode toggle" title="Light mode"></button>
-        </div>
-        <script>
-            const cls = document.body.classList;
-            const getSessionTheme = sessionStorage.getItem("theme");
-            if (getSessionTheme === "dark") {
-                cls.toggle("dark-mode", true);
-            } else if (getSessionTheme === "light") {
-                cls.toggle("dark-mode", false);
-            } else {
-                cls.toggle("dark-mode", false);
+                licensed under
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
+            </span>
+        </footer>
+    </div>
+    <div class="dark-mode-buttons">
+        <button class="dark-mode-button" id="dark-mode-on"><img src="{{ get_url(path='svg/dark_mode.svg') }}" width="24"
+                height="24" alt="Dark mode" aria-label="dark mode toggle" title="Dark mode"></button>
+        <button class="dark-mode-button" id="dark-mode-off"><img src="{{ get_url(path='svg/light_mode.svg') }}"
+                width="24" height="24" alt="Light mode" aria-label="light mode toggle" title="Light mode"></button>
+    </div>
+    <script>
+        const cls = document.body.classList;
+        const getSessionTheme = sessionStorage.getItem("theme");
+        if (getSessionTheme === "dark") {
+            cls.toggle("dark-mode", true);
+        } else if (getSessionTheme === "light") {
+            cls.toggle("dark-mode", false);
+        } else {
+            cls.toggle("dark-mode", false);
+        }
+
+        document.getElementById("dark-mode-on").addEventListener("click", function (e) {
+            cls.toggle("dark-mode", true);
+            sessionStorage.setItem("theme", "dark");
+        });
+        document.getElementById("dark-mode-off").addEventListener("click", function (e) {
+            cls.toggle("dark-mode", false);
+            sessionStorage.setItem("theme", "light");
+        });
+    </script>
+    <noscript>
+        <style>
+            .dark-mode-buttons {
+                display: none;
             }
+        </style>
+    </noscript>
+</body>
 
-            document.getElementById("dark-mode-on").addEventListener("click", function(e) {
-                cls.toggle("dark-mode", true);
-                sessionStorage.setItem("theme", "dark");
-            });
-                document.getElementById("dark-mode-off").addEventListener("click", function(e) {
-                cls.toggle("dark-mode", false);
-                sessionStorage.setItem("theme", "light");
-            });
-        </script>
-        <noscript>
-            <style>
-                .dark-mode-buttons {
-                    display: none;
-                }
-            </style>
-        </noscript>
-    </body>
 </html>
-
