--- a/themes/no-style-please/sass/style.scss
+++ b/themes/no-style-please/sass/style.scss
@@ -98,7 +98,6 @@ td {
 
 :not(pre)>code {
     background-color: #e6e6e6 !important;
-    color: black;
     padding: 0.1em 0.2em;
     margin: 0;
     font-size: 85%;
@@ -164,8 +163,8 @@ nav,
     font-family: "Jetbrains Mono";
 }
 
-.post-content {
-    font-family: sans-serif;
+.post-content :not(h1):not(h2):not(h3):not(code):not(pre code span) {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
 .greeting {
