BUNCH OF DESIGN CHANGES

--- a/themes/no-style-please/templates/blog.html
+++ b/themes/no-style-please/templates/blog.html
@@ -2,10 +2,7 @@
 
 {% block header %}
     <p>
-        <a href="{{ section.path }}..">..</a>{{ section.path }}{ <a href="/tags">tags</a>, <a href="/categories">categories</a> } ->
-        {% if section.extra.greeting %}
-            <span class="greeting">{{ section.extra.greeting }}</span>
-        {% endif %}
+        <a href="{{ section.path }}..">..</a>{{ section.path }}{ <a href="/tags">tags</a>, <a href="/categories">categories</a> }
     </p>
 {% endblock header %}
 {% block content%}
