--- a/themes/no-style-please/templates/page.html
+++ b/themes/no-style-please/templates/page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<p><a href="..">..</a>/{{ page.slug }} -> {{ super() }}</p>
+<p><a href="..">..</a>/{{ page.slug }}</p>
 <p class="post-meta"><time datetime="{{ page.date }}">{{ page.date }}</time></p>
 {% endblock header %}
 
