--- a/themes/no-style-please/templates/index.html
+++ b/themes/no-style-please/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<p><a href=".">~</a>/ -> {{ super() }}</p>
+<p><a href=".">~</a>/</p>
 {% endblock header %}
 
 {% block content %}
