--- a/themes/no-style-please/templates/section.html
+++ b/themes/no-style-please/templates/section.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<p><a href="{{ section.path }}..">..</a>{{ section.path }} -> {{ super() }}</p>
+<p><a href="{{ section.path }}..">..</a>{{ section.path }}</p>
 {% endblock header %}
 
 {% block content %}
