--- a/themes/no-style-please/sass/style.scss
+++ b/themes/no-style-please/sass/style.scss
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-    font-family: "monospace";
+    font-family: "monospace", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-optical-sizing: auto;
     font-weight: medium;
     font-style: normal;
