--- a/themes/no-style-please/templates/blog.html
+++ b/themes/no-style-please/templates/blog.html
@@ -7,5 +7,5 @@
 {% endblock header %}
 {% block content%}
     {{ super() }}
-    <p class="rss-sub">Subscribe <a href="atom.xml">via atom</a></p>
+    <!-- <p class="rss-sub">Subscribe <a href="atom.xml">via atom</a></p> -->
 {% endblock content %}
