--- a/themes/no-style-please/templates/base.html
+++ b/themes/no-style-please/templates/base.html
@@ -150,7 +150,7 @@
         } else if (getSessionTheme === "light") {
             cls.toggle("dark-mode", false);
         } else {
-            cls.toggle("dark-mode", false);
+            cls.toggle("dark-mode", true);
         }
 
         document.getElementById("dark-mode-on").addEventListener("click", function (e) {
